[package]
name = "lametesuncrey-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
lametesuncrey-common = { path = "../lametesuncrey-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "lametesuncrey"
path = "src/main.rs"
